WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
93157
DFG::StructureCheckHoistingPhase keeps a Node& around for too long
https://bugs.webkit.org/show_bug.cgi?id=93157
Summary
DFG::StructureCheckHoistingPhase keeps a Node& around for too long
Filip Pizlo
Reported
2012-08-03 14:15:37 PDT
Patch forthcoming.
Attachments
the patch
(3.73 KB, patch)
2012-08-03 14:19 PDT
,
Filip Pizlo
mhahnenberg
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2012-08-03 14:19:45 PDT
Created
attachment 156456
[details]
the patch
Mark Hahnenberg
Comment 2
2012-08-03 14:32:16 PDT
Comment on
attachment 156456
[details]
the patch Maybe add a comment above the declaration of the Node warning future travelers that they should be careful not to use it after the append? Other than that, looks good.
Filip Pizlo
Comment 3
2012-08-03 14:42:11 PDT
Landed in
http://trac.webkit.org/changeset/124655
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug