DFG::StructureCheckHoistingPhase keeps a Node& around for too long https://bugs.webkit.org/show_bug.cgi?id=93157

Reviewed by Mark Hahnenberg.

* dfg/DFGStructureCheckHoistingPhase.cpp:
(JSC::DFG::StructureCheckHoistingPhase::run):



Canonical link: https://commits.webkit.org/111001@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@124655 268f45cc-cd09-0410-ab3c-d52691b4dbfc